// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`runAll should not skip tasks if there are files 1`] = `
"
LOG Preparing... [started]
LOG Preparing... [completed]
LOG Running tasks... [started]
LOG Running tasks for *.js [started]
LOG echo \\"sample\\" [started]
LOG echo \\"sample\\" [completed]
LOG Running tasks for *.js [completed]
LOG Running tasks... [completed]
LOG Applying modifications... [started]
LOG Applying modifications... [completed]
LOG Cleaning up... [started]
LOG Cleaning up... [completed]"
`;

exports[`runAll should resolve the promise with no files 1`] = `
"
LOG No staged files found."
`;

exports[`runAll should skip applying unstaged modifications if there are errors during linting 1`] = `
"
LOG Preparing... [started]
LOG Preparing... [completed]
LOG Running tasks... [started]
LOG Running tasks for *.js [started]
LOG echo \\"sample\\" [started]
LOG echo \\"sample\\" [failed]
LOG → 
LOG Running tasks for *.js [failed]
LOG → 
LOG Running tasks... [failed]
LOG Applying modifications... [started]
LOG Applying modifications... [skipped]
LOG → Skipped because of errors from tasks.
LOG Reverting to original state because of errors... [started]
LOG Reverting to original state because of errors... [completed]
LOG Cleaning up... [started]
LOG Cleaning up... [completed]
LOG {
  name: 'ListrError',
  errors: [
    {
      privateMsg: '\\\\n\\\\n\\\\n× echo found some errors. Please fix them and try committing again.\\\\n\\\\nLinter finished with error',
      context: {taskError: true}
    }
  ],
  context: {taskError: true}
}"
`;

exports[`runAll should skip tasks and restore state if terminated 1`] = `
"
LOG Preparing... [started]
LOG Preparing... [completed]
LOG Running tasks... [started]
LOG Running tasks for *.js [started]
LOG echo \\"sample\\" [started]
LOG echo \\"sample\\" [failed]
LOG → 
LOG Running tasks for *.js [failed]
LOG → 
LOG Running tasks... [failed]
LOG Applying modifications... [started]
LOG Applying modifications... [skipped]
LOG → Skipped because of errors from tasks.
LOG Reverting to original state because of errors... [started]
LOG Reverting to original state because of errors... [completed]
LOG Cleaning up... [started]
LOG Cleaning up... [completed]
LOG {
  name: 'ListrError',
  errors: [
    {
      privateMsg: '\\\\n\\\\n\\\\n‼ echo was terminated with SIGINT',
      context: {taskError: true}
    }
  ],
  context: {taskError: true}
}"
`;

exports[`runAll should use an injected logger 1`] = `
"
LOG No staged files found."
`;
